fix user module install

--- a/MuonTnP.ipynb
+++ b/MuonTnP.ipynb
@@ -56,7 +56,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Additionally, if you wish to run the fitting steps at the end, you will need to install `probfit`"
+    "Additionally, if you wish to run the fitting steps at the end, you will need to install `uproot`, `uproot_methods`, and `probfit`."
    ]
   },
   {
@@ -82,6 +82,8 @@
     }
    ],
    "source": [
+    "!pip install --user uproot\n",
+    "!pip install --user uproot_methods\n",
     "!pip install --user probfit"
    ]
   },
