updated to default to root

--- a/MuonTnP.ipynb
+++ b/MuonTnP.ipynb
@@ -114,6 +114,16 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# change this if you are using analytic and the parquet dataformat\n",
+    "useParquet = False"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [
@@ -127,13 +137,13 @@
        "        <div>\n",
        "            <p><b>SparkContext</b></p>\n",
        "\n",
-       "            <p><a href=\"http://swan006.cern.ch:5249\">Spark UI</a></p>\n",
+       "            <p><a href=\"http://swan005.cern.ch:5049\">Spark UI</a></p>\n",
        "\n",
        "            <dl>\n",
        "              <dt>Version</dt>\n",
        "                <dd><code>v2.4.3</code></dd>\n",
        "              <dt>Master</dt>\n",
-       "                <dd><code>yarn</code></dd>\n",
+       "                <dd><code>k8s://https://188.184.157.211:6443</code></dd>\n",
        "              <dt>AppName</dt>\n",
        "                <dd><code>pyspark_shell_swan</code></dd>\n",
        "            </dl>\n",
@@ -143,7 +153,7 @@
        "        "
       ],
       "text/plain": [
-       "<pyspark.sql.session.SparkSession at 0x7f376a698b00>"
+       "<pyspark.sql.session.SparkSession at 0x7f2f33db2da0>"
       ]
      },
      "execution_count": 1,
@@ -181,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -387,14 +397,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "def run_conversion(resonance,era,subEra):\n",
     "    \n",
-    "    useParquet = True\n",
-    "    testing = False\n",
+    "    testing = True\n",
     "    \n",
     "    fnames = get_files(resonance,era,subEra,useParquet)\n",
     "\n",
@@ -565,6 +574,10 @@
     "    },\n",
     "}\n",
     "\n",
+    "# cannot process all rootfiles at once in data\n",
+    "if not useParquet:\n",
+    "    subEras['Z']['Run2017_UL'] = [f'Run2017{b}' for b in 'BCDEF']+['DY_madgraph']\n",
+    "\n",
     "def run_all(resonance,era):\n",
     "    for subEra in subEras.get(resonance,{}).get(era,[]):\n",
     "        run_conversion(resonance,era,subEra)"
@@ -583,7 +596,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {
     "scrolled": true
    },
@@ -592,58 +605,32 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "processing Z Run2017_UL Run2017 NUM_TrackerMuons_DEN_genTracks_abseta_pt\n",
-      "processing Z Run2017_UL Run2017 NUM_LooseID_DEN_genTracks_abseta_pt\n",
-      "processing Z Run2017_UL Run2017 NUM_LooseID_DEN_TrackerMuons_abseta_pt\n",
-      "processing Z Run2017_UL Run2017 NUM_MediumID_DEN_genTracks_abseta_pt\n",
-      "processing Z Run2017_UL Run2017 NUM_MediumID_DEN_TrackerMuons_abseta_pt\n",
-      "processing Z Run2017_UL Run2017 NUM_MediumPromptID_DEN_genTracks_abseta_pt\n",
-      "processing Z Run2017_UL Run2017 NUM_MediumPromptID_DEN_TrackerMuons_abseta_pt\n",
-      "processing Z Run2017_UL Run2017 NUM_TightID_DEN_genTracks_abseta_pt\n",
-      "processing Z Run2017_UL Run2017 NUM_TightID_DEN_TrackerMuons_abseta_pt\n",
-      "processing Z Run2017_UL Run2017 NUM_SoftID_DEN_genTracks_abseta_pt\n",
-      "processing Z Run2017_UL Run2017 NUM_SoftID_DEN_TrackerMuons_abseta_pt\n",
-      "processing Z Run2017_UL Run2017 NUM_HighPtID_DEN_genTracks_abseta_pt\n",
-      "processing Z Run2017_UL Run2017 NUM_HighPtID_DEN_TrackerMuons_abseta_pt\n",
-      "processing Z Run2017_UL Run2017 NUM_TrkHighPtID_DEN_genTracks_abseta_pt\n",
-      "processing Z Run2017_UL Run2017 NUM_TrkHighPtID_DEN_TrackerMuons_abseta_pt\n",
-      "processing Z Run2017_UL Run2017 NUM_LooseRelIso_DEN_LooseID_abseta_pt\n",
-      "processing Z Run2017_UL Run2017 NUM_LooseRelIso_DEN_MediumID_abseta_pt\n",
-      "processing Z Run2017_UL Run2017 NUM_LooseRelIso_DEN_MediumPromptID_abseta_pt\n",
-      "processing Z Run2017_UL Run2017 NUM_LooseRelIso_DEN_TightIDandIPCut_abseta_pt\n",
-      "processing Z Run2017_UL Run2017 NUM_TightRelIso_DEN_MediumID_abseta_pt\n",
-      "processing Z Run2017_UL Run2017 NUM_TightRelIso_DEN_MediumPromptID_abseta_pt\n",
-      "processing Z Run2017_UL Run2017 NUM_TightRelIso_DEN_TightIDandIPCut_abseta_pt\n",
-      "processing Z Run2017_UL Run2017 NUM_LooseRelTkIso_DEN_HighPtIDandIPCut_abseta_pt\n",
-      "processing Z Run2017_UL Run2017 NUM_LooseRelTkIso_DEN_TrkHighPtIDandIPCut_abseta_pt\n",
-      "processing Z Run2017_UL Run2017 NUM_TightRelTkIso_DEN_HighPtIDandIPCut_abseta_pt\n",
-      "processing Z Run2017_UL Run2017 NUM_TightRelTkIso_DEN_TrkHighPtIDandIPCut_abseta_pt\n",
-      "processing Z Run2017_UL DY_madgraph NUM_TrackerMuons_DEN_genTracks_abseta_pt\n",
-      "processing Z Run2017_UL DY_madgraph NUM_LooseID_DEN_genTracks_abseta_pt\n",
-      "processing Z Run2017_UL DY_madgraph NUM_LooseID_DEN_TrackerMuons_abseta_pt\n",
-      "processing Z Run2017_UL DY_madgraph NUM_MediumID_DEN_genTracks_abseta_pt\n",
-      "processing Z Run2017_UL DY_madgraph NUM_MediumID_DEN_TrackerMuons_abseta_pt\n",
-      "processing Z Run2017_UL DY_madgraph NUM_MediumPromptID_DEN_genTracks_abseta_pt\n",
-      "processing Z Run2017_UL DY_madgraph NUM_MediumPromptID_DEN_TrackerMuons_abseta_pt\n",
-      "processing Z Run2017_UL DY_madgraph NUM_TightID_DEN_genTracks_abseta_pt\n",
-      "processing Z Run2017_UL DY_madgraph NUM_TightID_DEN_TrackerMuons_abseta_pt\n",
-      "processing Z Run2017_UL DY_madgraph NUM_SoftID_DEN_genTracks_abseta_pt\n",
-      "processing Z Run2017_UL DY_madgraph NUM_SoftID_DEN_TrackerMuons_abseta_pt\n",
-      "processing Z Run2017_UL DY_madgraph NUM_HighPtID_DEN_genTracks_abseta_pt\n",
-      "processing Z Run2017_UL DY_madgraph NUM_HighPtID_DEN_TrackerMuons_abseta_pt\n",
-      "processing Z Run2017_UL DY_madgraph NUM_TrkHighPtID_DEN_genTracks_abseta_pt\n",
-      "processing Z Run2017_UL DY_madgraph NUM_TrkHighPtID_DEN_TrackerMuons_abseta_pt\n",
-      "processing Z Run2017_UL DY_madgraph NUM_LooseRelIso_DEN_LooseID_abseta_pt\n",
-      "processing Z Run2017_UL DY_madgraph NUM_LooseRelIso_DEN_MediumID_abseta_pt\n",
-      "processing Z Run2017_UL DY_madgraph NUM_LooseRelIso_DEN_MediumPromptID_abseta_pt\n",
-      "processing Z Run2017_UL DY_madgraph NUM_LooseRelIso_DEN_TightIDandIPCut_abseta_pt\n",
-      "processing Z Run2017_UL DY_madgraph NUM_TightRelIso_DEN_MediumID_abseta_pt\n",
-      "processing Z Run2017_UL DY_madgraph NUM_TightRelIso_DEN_MediumPromptID_abseta_pt\n",
-      "processing Z Run2017_UL DY_madgraph NUM_TightRelIso_DEN_TightIDandIPCut_abseta_pt\n",
-      "processing Z Run2017_UL DY_madgraph NUM_LooseRelTkIso_DEN_HighPtIDandIPCut_abseta_pt\n",
-      "processing Z Run2017_UL DY_madgraph NUM_LooseRelTkIso_DEN_TrkHighPtIDandIPCut_abseta_pt\n",
-      "processing Z Run2017_UL DY_madgraph NUM_TightRelTkIso_DEN_HighPtIDandIPCut_abseta_pt\n",
-      "processing Z Run2017_UL DY_madgraph NUM_TightRelTkIso_DEN_TrkHighPtIDandIPCut_abseta_pt\n"
+      "processing Z Run2017_UL Run2017B NUM_TrackerMuons_DEN_genTracks_abseta_pt\n",
+      "processing Z Run2017_UL Run2017B NUM_LooseID_DEN_genTracks_abseta_pt\n",
+      "processing Z Run2017_UL Run2017B NUM_LooseID_DEN_TrackerMuons_abseta_pt\n",
+      "processing Z Run2017_UL Run2017B NUM_MediumID_DEN_genTracks_abseta_pt\n",
+      "processing Z Run2017_UL Run2017B NUM_MediumID_DEN_TrackerMuons_abseta_pt\n",
+      "processing Z Run2017_UL Run2017B NUM_MediumPromptID_DEN_genTracks_abseta_pt\n",
+      "processing Z Run2017_UL Run2017B NUM_MediumPromptID_DEN_TrackerMuons_abseta_pt\n",
+      "processing Z Run2017_UL Run2017B NUM_TightID_DEN_genTracks_abseta_pt\n",
+      "processing Z Run2017_UL Run2017B NUM_TightID_DEN_TrackerMuons_abseta_pt\n",
+      "processing Z Run2017_UL Run2017B NUM_SoftID_DEN_genTracks_abseta_pt\n",
+      "processing Z Run2017_UL Run2017B NUM_SoftID_DEN_TrackerMuons_abseta_pt\n",
+      "processing Z Run2017_UL Run2017B NUM_HighPtID_DEN_genTracks_abseta_pt\n",
+      "processing Z Run2017_UL Run2017B NUM_HighPtID_DEN_TrackerMuons_abseta_pt\n",
+      "processing Z Run2017_UL Run2017B NUM_TrkHighPtID_DEN_genTracks_abseta_pt\n",
+      "processing Z Run2017_UL Run2017B NUM_TrkHighPtID_DEN_TrackerMuons_abseta_pt\n",
+      "processing Z Run2017_UL Run2017B NUM_LooseRelIso_DEN_LooseID_abseta_pt\n",
+      "processing Z Run2017_UL Run2017B NUM_LooseRelIso_DEN_MediumID_abseta_pt\n",
+      "processing Z Run2017_UL Run2017B NUM_LooseRelIso_DEN_MediumPromptID_abseta_pt\n",
+      "processing Z Run2017_UL Run2017B NUM_LooseRelIso_DEN_TightIDandIPCut_abseta_pt\n",
+      "processing Z Run2017_UL Run2017B NUM_TightRelIso_DEN_MediumID_abseta_pt\n",
+      "processing Z Run2017_UL Run2017B NUM_TightRelIso_DEN_MediumPromptID_abseta_pt\n",
+      "processing Z Run2017_UL Run2017B NUM_TightRelIso_DEN_TightIDandIPCut_abseta_pt\n",
+      "processing Z Run2017_UL Run2017B NUM_LooseRelTkIso_DEN_HighPtIDandIPCut_abseta_pt\n",
+      "processing Z Run2017_UL Run2017B NUM_LooseRelTkIso_DEN_TrkHighPtIDandIPCut_abseta_pt\n",
+      "processing Z Run2017_UL Run2017B NUM_TightRelTkIso_DEN_HighPtIDandIPCut_abseta_pt\n",
+      "processing Z Run2017_UL Run2017B NUM_TightRelTkIso_DEN_TrkHighPtIDandIPCut_abseta_pt\n"
      ]
     }
    ],
@@ -651,14 +638,14 @@
     "# select job to run\n",
     "resonance = 'Z'\n",
     "era = 'Run2017_UL'\n",
-    "subEra = 'Run2017'\n",
-    "#run_conversion(resonance,era,subEra)\n",
-    "#subEra = 'DY_madgraph'\n",
+    "subEra = 'Run2017B'\n",
+    "run_conversion(resonance,era,subEra)\n",
+    "subEra = 'DY_madgraph'\n",
     "#run_conversion(resonance,era,subEra)\n",
     "\n",
     "\n",
     "# process all at once\n",
-    "run_all(resonance,era)"
+    "#run_all(resonance,era)"
    ]
   },
   {
@@ -3261,7 +3248,32 @@
    "bundled_options": [
     "MemoryIntensive"
    ],
-   "list_of_options": []
+   "list_of_options": [
+    {
+     "name": "spark.dynamicAllocation.maxExecutors",
+     "value": "100"
+    },
+    {
+     "name": "spark.driver.memory",
+     "value": "6g"
+    },
+    {
+     "name": "spark.jars",
+     "value": "laurelin-1.0.0.jar,log4j-api-2.13.0.jar,log4j-core-2.13.0.jar"
+    },
+    {
+     "name": "spark.kubernetes.container.image",
+     "value": "gitlab-registry.cern.ch/db/spark-service/docker-registry/swan:laurelin"
+    },
+    {
+     "name": "spark.kubernetes.container.image.pullPolicy",
+     "value": "Always"
+    },
+    {
+     "name": "spark.driver.extraClassPath",
+     "value": "./laurelin-1.0.0.jar,./log4j-api-2.13.0.jar,./log4j-core-2.13.0.jar"
+    }
+   ]
   }
  },
  "nbformat": 4,
